# NotesE2023

./: .gitignore  Makefile  commands.sty  latexmkrc.fls  main.aux  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  refs.bib  style.sty
code_snip/: main.c  nombre.nasm  test.nasm
ham_exemple/: Cargo.toml
ham_exemple/src/: main.rs  matrix.rs  operators.rs
ham_exemple/src/matrix/: operators.rs
sections/: semaine1.tex  semaine2.tex  semaine3.tex
