[package]
name = "hamiltonienhubbard_exemple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lapack = "0.19.0"

[profile.release]
#lto = true
panic = "abort"
opt-level = 3
incremental = true
codegen-units = 1
